# jrxtx

./: .gitignore  .travis.yml  build.gradle  configuration.gradle  download-native-jars.py  download-native-libs.py
native/: .gitignore  BUILD.sh  BUILD_mingw.sh  Makefile.am  autogen.sh  configure.in
native/src/: I2CImp.c  ParallelImp.c  RS485Imp.c  RawImp.c  SerialImp.c  SerialImp.cpp  win32termios.h
src/main-rxtx/java/gnu/io/: RXTXCommDriver.java  RXTXVersion.java
src/main/java/gnu/io/: LibraryLoader.java
src/main/java/org/openmuc/jrxtx/: JRxTxPort.java
